Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22443

terminate called after throwing an instance of 'wsrep::runtime_error' in std::terminate on START TRANSACTION

    XMLWordPrintable

Details

    Description

      SET @@SESSION.wsrep_causal_reads=ON;
      SET SESSION wsrep_on=1;
      START TRANSACTION READ WRITE;
      

      Leads to:

      10.5.3 98003440c2f8d20164a191ced1b7d92b283bb68f

      2020-05-04  3:10:25 0 [Note] /test/MD300420-mariadb-10.5.3-linux-x86_64-opt/bin/mysqld: ready for connections.
      Version: '10.5.3-MariaDB'  socket: '/test/MD300420-mariadb-10.5.3-linux-x86_64-opt/socket.sock'  port: 10419  MariaDB Server
      terminate called after throwing an instance of 'wsrep::runtime_error'
        what():  provider not loaded
      200504  3:10:54 [ERROR] mysqld got signal 6 ;
      

      10.5.3 98003440c2f8d20164a191ced1b7d92b283bb68f

      Core was generated by `/test/MD300420-mariadb-10.5.3-linux-x86_64-opt/bin/mysqld --no-defaults --core-'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
          at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
      [Current thread is 1 (Thread 0x7fcccb22d700 (LWP 3156879))]
      (gdb) bt
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
      #1  0x000055888b4ec707 in my_write_core (sig=sig@entry=6) at /test/10.5_opt/mysys/stacktrace.c:518
      #2  0x000055888aeae92a in handle_fatal_signal (sig=6) at /test/10.5_opt/sql/signal_handler.cc:329
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
      #5  0x00007fccc9971801 in __GI_abort () at abort.c:79
      #6  0x00007fccca14c957 in ?? () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #7  0x00007fccca152ae6 in ?? () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #8  0x00007fccca152b21 in std::terminate() () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #9  0x00007fccca152d54 in __cxa_throw () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #10 0x000055888b61db2a in wsrep::server_state::provider (this=<optimized out>) at /test/10.5_opt/wsrep-lib/include/wsrep/server_state.hpp:310
      #11 wsrep::server_state::causal_read (this=<optimized out>, timeout=timeout@entry=-1) at /test/10.5_opt/wsrep-lib/src/server_state.cpp:838
      #12 0x000055888b614a0a in wsrep::client_state::sync_wait (this=this@entry=0x7fcc91c18120, timeout=timeout@entry=-1) at /test/10.5_opt/wsrep-lib/src/client_state.cpp:716
      #13 0x000055888b18f93d in wsrep_sync_wait (thd=thd@entry=0x7fcc91c12018, mask=mask@entry=1) at /test/10.5_opt/sql/wsrep_mysqld.cc:1150
      #14 0x000055888adb6605 in trans_begin (thd=thd@entry=0x7fcc91c12018, flags=4) at /test/10.5_opt/sql/transaction.cc:187
      #15 0x000055888acba165 in mysql_execute_command (thd=thd@entry=0x7fcc91c12018) at /test/10.5_opt/sql/sql_parse.cc:5525
      #16 0x000055888acbfecc in mysql_parse (thd=thd@entry=0x7fcc91c12018, rawbuf=<optimized out>, length=28, parser_state=parser_state@entry=0x7fcccb22c4d0, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.5_opt/sql/sql_parse.cc:7957
      #17 0x000055888acb4d00 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x7fcc91c12018, packet=packet@entry=0x7fcc91c3a019 "START TRANSACTION READ WRITE", packet_length=packet_length@entry=28, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.5_opt/sql/sql_parse.cc:1839
      #18 0x000055888acb301f in do_command (thd=0x7fcc91c12018) at /test/10.5_opt/sql/sql_parse.cc:1358
      #19 0x000055888ada822e in do_handle_one_connection (connect=<optimized out>, connect@entry=0x7fccc8c329b8, put_in_cache=put_in_cache@entry=true) at /test/10.5_opt/sql/sql_connect.cc:1422
      #20 0x000055888ada83d4 in handle_one_connection (arg=arg@entry=0x7fccc8c329b8) at /test/10.5_opt/sql/sql_connect.cc:1319
      #21 0x000055888b114c9a in pfs_spawn_thread (arg=0x7fccc8c4b018) at /test/10.5_opt/storage/perfschema/pfs.cc:2201
      #22 0x00007fccca6546db in start_thread (arg=0x7fcccb22d700) at pthread_create.c:463
      #23 0x00007fccc9a5288f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.4.13 (dbg), 10.4.13 (opt), 10.5.2 (dbg), 10.5.2 (opt), 10.5.3 (dbg), 10.5.3 (opt)

      Bug confirmed not present in:
      MariaDB: 10.1.45 (dbg), 10.1.45 (opt), 10.2.32 (dbg), 10.2.32 (opt), 10.3.23 (dbg), 10.3.23 (opt)
      MySQL: 5.5.62 (dbg), 5.5.62 (opt), 5.6.47 (dbg), 5.6.47 (opt), 5.7.29 (dbg), 5.7.29 (opt), 8.0.19 (dbg), 8.0.19 (opt)

      MySQL 10.3.23 (dbg):

      10.3.23>SET @@SESSION.wsrep_causal_reads=ON;
      Query OK, 0 rows affected, 1 warning (0.000 sec)
       
      10.3.23>SHOW WARNINGS\G
      *************************** 1. row ***************************
        Level: Warning
         Code: 1287
      Message: '@@wsrep_causal_reads' is deprecated and will be removed in a future release. Please use '@@wsrep_sync_wait=1' instead
      1 row in set (0.000 sec)
       
      10.3.23>SET SESSION wsrep_on=1;
      Query OK, 0 rows affected (0.000 sec)
       
      10.3.23>START TRANSACTION READ WRITE;
      Query OK, 0 rows affected (0.000 sec)
      

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2h 4m
                  2h 4m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.